tests/out/error/match/branch_wrong_return.out
tests/out/error/match/branch_wrong_return.in.bt:3:2 error: branch returns bool, expected string
